# MLOPS-2-RC

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: app.py  schema.py
artifacts/monitoring/: summary.json
artifacts/registry/: m1.json
src/slu/: cli.py  evaluate.py  hparam_search.py  train.py
