[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slu-mlops"
version = "0.1.0"
description = "Retail SLU MLOps pipeline"
readme = "README.md"
authors = [{ name = "Team" }]
requires-python = ">=3.10"
dependencies = [
	"torch",
	"librosa",
	"pandas",
	"numpy",
	"pyyaml",
	"soundfile",
	"scikit-learn",
	"matplotlib",
	"fastapi",
	"uvicorn",
	"wandb",
	"optuna",
	"typer>=0.9",
]

[project.scripts]
slu = "slu.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["slu*" ]
